<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <androidx.cardview.widget.CardView
        android:id="@+id/theaterTUZ"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:onClick="CardClick">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/theaterTUZ_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/theaterTUZ_image_view"
                android:layout_toRightOf="@id/theaterTUZ_image_view"
                android:text="@string/theaterTUZ_name"
                android:textSize="@dimen/theater_name_size" />

            <TextView
                android:id="@+id/theaterTUZ_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/theaterTUZ_name_text_view"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/theaterTUZ_image_view"
                android:text="@string/theaterTUZ_address"
                android:textSize="@dimen/theater_address_size" />

            <ImageView
                android:id="@+id/theaterTUZ_image_view"
                android:src="@drawable/spas"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_width" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/theaterDrama"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:onClick="CardClick">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/theaterDrama_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/image_view_width"
                android:layout_marginLeft="@dimen/image_view_width"
                android:text="@string/theaterDrama_name"
                android:textSize="@dimen/theater_name_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/theaterDrama_address_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/image_view_width"
                android:layout_marginLeft="@dimen/image_view_width"
                android:text="@string/theaterDrama_address"
                android:textSize="@dimen/theater_address_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/theaterDrama_name_text_view"/>

            <ImageView
                android:id="@+id/theaterDrama_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="117dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dram" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/theaterDol"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:onClick="CardClick">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/theaterDol_image_view"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_width"

                android:src="@drawable/dol"
                android:layout_gravity="left|top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/theaterDol_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theaterDol_name"
                    android:textSize="@dimen/theater_name_size" />

                <TextView
                    android:id="@+id/theaterDol_address_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theaterDol_address"
                    android:textSize="@dimen/theater_address_size" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>